--- a/index.html
+++ b/index.html
@@ -14,5 +14,19 @@
       frameborder="0"
       scrolling="no"
     ></iframe>
+    <iframe
+      width="110"
+      height="200"
+      src="https://www.myinstants.com/instant/babulka-ia-zalez-44961/embed/"
+      frameborder="0"
+      scrolling="no"
+    ></iframe>
+    <iframe
+      width="110"
+      height="200"
+      src="https://www.myinstants.com/instant/ponos-mp3-73881/embed/"
+      frameborder="0"
+      scrolling="no"
+    ></iframe>
   </body>
 </html>
